// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryQueryForm check HistoryQueryForm with data: MSSQL South -> Console 1`] = `
<div>
  <div
    class="d-flex align-items-center w-100 oi-sub-nav mb-2"
  >
    <h6
      class="text-muted d-flex align-items-center pl-3 pt-1 ml-2"
    >
      <button
        class="util-button btn btn-outline-secondary"
        id="oi-navigate"
        type="button"
      >
        <svg
          class="oi-back-icon mr-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          />
        </svg>
      </button>
      | MSSQL South -&gt; Console
    </h6>
  </div>
  <div
    class="container-fluid"
  >
    <form
      class="m-2"
    >
      <div
        class="row"
      >
        <h5>
          Handlers
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-2"
        >
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
          <svg
            class="me-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
            />
          </svg>
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          General settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="form-check form-switch"
          >
            <input
              checked=""
              class="mb-3 form-check-input"
              color="secondary"
              id="enabled"
              label="Enabled"
              name="enabled"
              type="checkbox"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Enable this history query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Progress status
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-3"
        >
          <div>
            <span>
              <b>
                Status:
              </b>
            </span>
            <span
              class="text-warning mx-1"
            >
              pending
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="startTime"
            >
              From date
            </label>
            <input
              class="oi-form-input form-control"
              id="startTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="2021-10-15T14:18"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="endTime"
            >
              To date
            </label>
            <input
              class="oi-form-input form-control"
              id="endTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="2021-10-16T14:18"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="maxReadInterval"
            >
              Max read interval (s)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="maxReadInterval"
              name="maxReadInterval"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Put 0 to not split the query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="readIntervalDelay"
            >
              Read interval delay (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="readIntervalDelay"
              name="readIntervalDelay"
              type="integer"
              value="200"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="filePattern"
            >
              File pattern
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="filePattern"
              name="filePattern"
              type="text"
              value="history1-@CurrentDate.csv"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3 mb-3"
          >
            <label
              class="form-check-label form-label"
            >
              Compress
            </label>
            <input
              checked=""
              class="oi-form-input checkbox form-check-input"
              id="compress"
              name="compress"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-8"
        >
          <div
            class="spinner-container"
          >
            <div
              class="spinner-grow text-primary"
              role="status"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
            ...loading points from OIBus server...
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`HistoryQueryForm check HistoryQueryForm with data: MSSQL South -> OIAnalytics North 1`] = `
<div>
  <div
    class="d-flex align-items-center w-100 oi-sub-nav mb-2"
  >
    <h6
      class="text-muted d-flex align-items-center pl-3 pt-1 ml-2"
    >
      <button
        class="util-button btn btn-outline-secondary"
        id="oi-navigate"
        type="button"
      >
        <svg
          class="oi-back-icon mr-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          />
        </svg>
      </button>
      | MSSQL South -&gt; OIAnalytics North
    </h6>
  </div>
  <div
    class="container-fluid"
  >
    <form
      class="m-2"
    >
      <div
        class="row"
      >
        <h5>
          Handlers
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-2"
        >
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
          <svg
            class="me-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
            />
          </svg>
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          General settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="form-check form-switch"
          >
            <input
              checked=""
              class="mb-3 form-check-input"
              color="secondary"
              id="enabled"
              label="Enabled"
              name="enabled"
              type="checkbox"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Enable this history query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Progress status
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-3"
        >
          <div>
            <span>
              <b>
                Status:
              </b>
            </span>
            <span
              class="text-info mx-1"
            >
              exporting
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="startTime"
            >
              From date
            </label>
            <input
              class="oi-form-input form-control"
              id="startTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="2021-10-15T14:18"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="endTime"
            >
              To date
            </label>
            <input
              class="oi-form-input form-control"
              id="endTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="2021-10-16T14:18"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="maxReadInterval"
            >
              Max read interval (s)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="maxReadInterval"
              name="maxReadInterval"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Put 0 to not split the query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="readIntervalDelay"
            >
              Read interval delay (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="readIntervalDelay"
              name="readIntervalDelay"
              type="integer"
              value="200"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="filePattern"
            >
              File pattern
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="filePattern"
              name="filePattern"
              type="text"
              value="history1-@CurrentDate.csv"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3 mb-3"
          >
            <label
              class="form-check-label form-label"
            >
              Compress
            </label>
            <input
              checked=""
              class="oi-form-input checkbox form-check-input"
              id="compress"
              name="compress"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-8"
        >
          <div
            class="spinner-container"
          >
            <div
              class="spinner-grow text-primary"
              role="status"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
            ...loading points from OIBus server...
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`HistoryQueryForm check HistoryQueryForm with empty application 1`] = `
<div>
  <div
    class="d-flex align-items-center w-100 oi-sub-nav mb-2"
  >
    <h6
      class="text-muted d-flex align-items-center pl-3 pt-1 ml-2"
    >
      <button
        class="util-button btn btn-outline-secondary"
        id="oi-navigate"
        type="button"
      >
        <svg
          class="oi-back-icon mr-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          />
        </svg>
      </button>
      | north -&gt; south
    </h6>
  </div>
  <div
    class="container-fluid"
  >
    <form
      class="m-2"
    >
      <div
        class="row"
      >
        <h5>
          Handlers
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-2"
        >
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
          <svg
            class="me-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
            />
          </svg>
          <button
            class="inline-button autosize oi-status-button btn btn-outline-primary btn-sm"
            type="button"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          General settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="form-check form-switch"
          >
            <input
              class="mb-3 form-check-input"
              color="secondary"
              id="enabled"
              label="Enabled"
              name="enabled"
              type="checkbox"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Enable this history query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Progress status
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="mb-2 row"
      >
        <div
          class="col-md-3"
        >
          <div>
            <span>
              <b>
                Status:
              </b>
            </span>
            <span
              class="text-warning mx-1"
            >
              pending
            </span>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <h5>
          Settings
        </h5>
      </div>
      <div
        class="container-fluid"
      />
      <div
        class="row"
      >
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="startTime"
            >
              From date
            </label>
            <input
              class="oi-form-input form-control"
              id="startTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="1970-01-01T00:00"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="endTime"
            >
              To date
            </label>
            <input
              class="oi-form-input form-control"
              id="endTime"
              placeholder="yyyy-mm-ddThh:mm:ss+hh:mm"
              required=""
              type="datetime-local"
              value="1970-01-01T00:00"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="maxReadInterval"
            >
              Max read interval (s)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="maxReadInterval"
              name="maxReadInterval"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Put 0 to not split the query
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="readIntervalDelay"
            >
              Read interval delay (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="readIntervalDelay"
              name="readIntervalDelay"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-2"
        />
        <div
          class="col-md-2"
        >
          <div
            class="mb-3 mb-3"
          >
            <label
              class="form-check-label form-label"
            >
              Compress
            </label>
            <input
              class="oi-form-input checkbox form-check-input"
              id="compress"
              name="compress"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-8"
        >
          <div
            class="row"
          >
            <h5>
              Request
            </h5>
          </div>
          <div
            class="container-fluid"
          />
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="query"
            >
              Query
            </label>
            <div
              class="invalid-feedback"
            />
            <div
              class="mb-2"
            >
              <small
                class="form-text text-muted"
              >
                <div>
                  Available variables: @StartTime, @EndTime. Be sure to use both variables to split the query with the Max read interval field.
                </div>
              </small>
            </div>
            <section
              style="display: flex; position: relative; text-align: initial; width: 100%; height: 400px;"
            >
              <div
                style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;"
              >
                Loading...
              </div>
              <div
                style="width: 100%; display: none;"
              />
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
